validation prolongement